--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "llm-deepseek"
-version = "0.1.4"
-description = "Access deepseek.com models via API"
+name = "llm-nous"
+version = "0.1.0"
+description = "Access Nous Research models via API"
 readme = "README.md"
-authors = [{name = "abrasumente"}]
+authors = [{name = "oldhead"}]
 license = {text = "Apache-2.0"}
 classifiers = [
     "License :: OSI Approved :: Apache Software License"
@@ -13,13 +13,13 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/abrasumente233/llm-deepseek"
-Changelog = "https://github.com/abrasumente233/llm-deepseek/releases"
-Issues = "https://github.com/abrasumente233/llm-deepseek/issues"
-CI = "https://github.com/abrasumente233/llm-deepseek/actions"
+Homepage = "https://github.com/oldheadsouf/llm-nous"
+Changelog = "https://github.com/oldheadsouf/llm-nous/releases"
+Issues = "https://github.com/oldheadsouf/llm-nous/issues"
+CI = "https://github.com/oldheadsouf/llm-nous/actions"
 
 [project.entry-points.llm]
-deepseek = "llm_deepseek"
+nous = "llm_nous"
 
 [project.optional-dependencies]
 test = ["pytest"]
